<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- region SecureKeyPad container -->
    <FrameLayout
        android:id="@+id/secure_keypad_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    <!-- endregion -->

    <!-- region OTP Main screen -->
    <LinearLayout
        android:id="@+id/otp_tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="4dp"
                android:text="@string/txt_otp_type" />

            <RadioGroup
                android:id="@+id/radio_otp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioOathTotp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_oath_totp" />

                <RadioButton
                    android:id="@+id/radioOathOcra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_oath_ocra" />

                <RadioButton
                    android:id="@+id/radioCap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_cap" />

            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/protector_registration_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="0.30"
                android:autofillHints="@null"
                android:hint="@string/txt_registration_code_hint"
                android:inputType="numberPassword" />

            <Button
                android:id="@+id/provision"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:text="@string/txt_provision"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTokenSpinnerBackground"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/token_device" />

            <Spinner
                android:id="@+id/tokenSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:prompt="@string/spinner_title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorPinBackground"
                android:orientation="vertical">

                <Button
                    android:id="@+id/getOtpByPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/txt_get_otp_by_pin"
                    android:textAllCaps="false"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/changePin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/txt_change_pin"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@color/colorBioMetricBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="ButtonStyle">

                    <Button
                        android:id="@+id/activateBiometric"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/txt_activate_biometric"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/deactivateBiometric"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/txt_deactivate_biometric"
                        android:textAllCaps="false" />
                </LinearLayout>

                <Button
                    android:id="@+id/getOtpByBiometric"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_get_otp_by_biometric"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTokenManagementBackground"
            android:orientation="horizontal"
            tools:ignore="ButtonStyle">

            <Button
                android:id="@+id/listTokenDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/txt_list_token_devices"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/removeTokenDevice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/txt_remove_token_device"
                android:textAllCaps="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorLog">

            <TextView
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scrollbars="vertical" />
        </ScrollView>
    </LinearLayout>
    <!-- endregion -->
</FrameLayout>