<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/messenger_reg_code"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="5dp"
        android:autofillHints="@null"
        android:hint="@string/txt_registration_code_hint"
        android:inputType="numberPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txt_register"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/unregister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txt_unregister"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/fetch_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_fetch_message"
        android:textAllCaps="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorLog">

        <TextView
            android:id="@+id/message_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars="vertical" />
    </ScrollView>
</LinearLayout>